log
Fri 19 Aug 2022 12:46:40 PM UTC: 
 tests:  0|6
total_score: 0/70
cb16566
Fri 19 Aug 2022 01:11:03 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:53:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:52:6: note: declared here
   52 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:54:19: error: implicit declaration of function ‘crearNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   54 |   Node *newNode = crearNode(data);
      |                   ^~~~~~~~~
      |                   createNode
list.c:54:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:54:9: error: unused variable ‘newNode’ [-Werror=unused-variable]
   54 |   Node *newNode = crearNode(data);
      |         ^~~~~~~
list.c: In function ‘prevList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
04a65c9
